--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,32 +5,14 @@ project(
     VERSION 1.0.0
 )
 
-# include(FetchContent)
-
-# set(FETCHCONTENT_UPDATES_DISCONNECTED TRUE)
-
-# FetchContent_Declare(
-#     ftxui
-#     GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui.git
-#     GIT_TAG        v4.0.0  # specify the desired version of ftxui
-# )
-
-# FetchContent_GetProperties(ftxui)
-
-
-# if(NOT ftxui_POPULATED)
-#     FetchContent_Populate(ftxui)
-#     add_subdirectory(${ftxui_SOURCE_DIR} ${ftxui_BINARY_DIR} EXCLUDE_FROM_ALL)
-# endif()
-
-
 set(
     SOURCE 
-    main.cpp
+    src/main.cpp
 )
 
+
 include_directories(include)
-add_subdirectory(include)
+add_subdirectory(include/foo)
 
 
 add_executable(
@@ -41,10 +23,5 @@ add_executable(
 target_link_libraries(
     main foo
 )
-
-# target_include_directories(${PROJECT_NAME} 
-#     PRIVATE src
-#     PRIVATE include
-# )
 
 
